# docs/swagger.json
@@ -275,6 +275,31 @@
         }
       }
     },
+    "/api/users/student-list": {
+      "get": {
+        "tags": [
+          "users"
+        ],
+        "summary": "Listado de estudiantes",
+        "description": "Permite obtener el listado de estudiantes.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Listado de asignaturas."
+          },
+          "401": {
+            "description": "Error de autenticación , verificar token."
+          },
+          "500": {
+            "description": "Error interno del servidor."
+          }
+        }
+      }
+    },
     "/api/subjects/link-student-to-subject": {
       "post": {
         "tags": [
