# src/user/core/router/user.router.js
@@ -7,4 +7,5 @@ router.post('/register', userController.createUser)
 router.get('/login', userController.loginUser)
 router.patch('/update/:userId', [auth, isAdmin], userController.updateUser)
 router.delete('/delete/:userId', [auth, isAdmin], userController.deleteUser)
+router.get('/student-list', [auth, isAdmin], userController.studentList)
 module.exports = router
